--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
         .mobile-controls { display: none; gap: 8px; }
 
         /* Hero Section */
-        .hero-section { min-height: 65vh; display: flex; align-items: center; justify-content: center; background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.75)), url('https://placehold.co/1920x1080/333333/666666?text=Modern+Fashion') no-repeat center center / cover; padding: 80px 0; text-align: center; position: relative; overflow: hidden; border-bottom: 1px solid var(--border-color); color: #fff; }
-        body.light-theme .hero-section { background: linear-gradient(rgba(255,255,255,0.3), rgba(240, 240, 240, 0.6)), url('https://placehold.co/1920x1080/eeeeee/cccccc?text=Modern+Fashion') no-repeat center center / cover; color: var(--light-text-primary); }
+        .hero-section { min-height: 65vh; display: flex; align-items: center; justify-content: center; background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.75)), url('https://placehold.co/1920x1080/333333/666666?text=BY+STORE_RD') no-repeat center center / cover; padding: 80px 0; text-align: center; position: relative; overflow: hidden; border-bottom: 1px solid var(--border-color); color: #fff; }
+        body.light-theme .hero-section { background: linear-gradient(rgba(255,255,255,0.3), rgba(240, 240, 240, 0.6)), url('https://placehold.co/1920x1080/eeeeee/cccccc?text=BY+STORE_RD') no-repeat center center / cover; color: var(--light-text-primary); }
         .hero-content { max-width: 750px; animation: fadeInHero 1.2s ease-out 0.2s both; }
         .hero-title { color: #fff; text-shadow: 2px 2px 8px rgba(0,0,0,0.5); margin-bottom: 10px; }
         body.light-theme .hero-title { color: var(--primary-accent); text-shadow: 1px 1px 4px rgba(0,0,0,0.1); }
