update style to show full photo
when you addd hime

--- a/index.html
+++ b/index.html
@@ -20,27 +20,53 @@
     <style>
         /* General Styles */
         .simple-grid { display: grid; }
-        .product-card { min-height: 300px; }
+        .product-card { min-height: 300px; display: flex; flex-direction: column; }
 
-        /* Image handling */
-        .product-card-img, .detail-swiper-image {
-            display: block; width: 100%; height: 100%; object-fit: contain;
-            background-color: #f3f4f6; /* Light fallback bg */
+        /* Product Card Image Container - Force Square Shape */
+        .product-card-image-container {
+            position: relative; /* Needed for absolute positioning of images inside */
+            width: 100%;
+            aspect-ratio: 1 / 1; /* Force square */
+            overflow: hidden;
+            background-color: #f9fafb; /* Optional: Background for the container itself */
+            flex-shrink: 0;
         }
-        html.dark .product-card-img, html.dark .detail-swiper-image {
-            background-color: #374151; /* Dark fallback bg */
+        html.dark .product-card-image-container {
+             background-color: #1f2937; /* Optional: Dark background for the container */
         }
+
+        /* Position BOTH images absolutely AND ensure object-fit: cover */
+        .product-card-image-container > .product-card-img,
+        .product-card-image-container > .product-card-img-hover {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%; /* Explicitly set width */
+            height: 100%; /* Explicitly set height */
+            object-fit: cover; /* <<< ENSURE THIS IS APPLIED TO BOTH */
+            display: block;
+            background-color: inherit; /* Inherit background from container */
+        }
+
+        /* Error placeholder specific style */
         .img-error { object-fit: scale-down; }
 
-        /* Product Card Image Hover Effect */
-        .product-card-image-container { position: relative; }
-        .product-card-img { transition: opacity 0.3s ease-in-out; }
+        /* Hover Logic */
+        .product-card-img { transition: opacity 0.3s ease-in-out; opacity: 1; z-index: 1; }
         .product-card-img-hover {
-            position: absolute; inset: 0; opacity: 0; pointer-events: none;
             transition: opacity 0.3s ease-in-out;
+            opacity: 0;
+            pointer-events: none;
+            z-index: 2;
         }
         .product-card.group:hover .product-card-img { opacity: 0; }
-        .product-card.group:hover .product-card-img-hover { opacity: 1; }
+        .product-card.group:hover .product-card-img-hover { opacity: 1; pointer-events: auto; }
+
+        /* Ensure product info takes remaining space */
+        .product-card-info { flex-grow: 1; display: flex; flex-direction: column; justify-content: space-between; }
+
+
+        /* --- Rest of the styles remain the same --- */
 
         /* Zoom Effect (Detail Panel) */
         .zoom-container { overflow: hidden; position: relative; cursor: zoom-in; }
@@ -60,11 +86,22 @@
 
         /* Detail Panel Swiper Styles */
         .detail-panel-swiper { width: 100%; height: 100%; position: relative; }
+        .detail-panel-image-wrapper { aspect-ratio: 1 / 1; }
+         /* Ensure image inside detail swiper also covers */
+        .detail-swiper-image {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            background-color: #f3f4f6;
+        }
+        html.dark .detail-swiper-image { background-color: #374151; }
+
         .detail-panel-swiper .swiper-slide {
             display: flex; justify-content: center; align-items: center;
-            overflow: hidden; background-color: #f9fafb; /* Light slide bg */
+            overflow: hidden; background-color: #f9fafb;
         }
-        html.dark .detail-panel-swiper .swiper-slide { background-color: #1f2937; } /* Dark slide bg */
+        html.dark .detail-panel-swiper .swiper-slide { background-color: #1f2937; }
         .detail-panel-swiper .swiper-pagination-bullet { background-color: rgba(0, 0, 0, 0.4); opacity: 0.6; width: 10px; height: 10px; }
         html.dark .detail-panel-swiper .swiper-pagination-bullet { background-color: rgba(255, 255, 255, 0.5); }
         .detail-panel-swiper .swiper-pagination-bullet-active { background-color: var(--color-primary); opacity: 1; }
