--- a/index.html
+++ b/index.html
@@ -604,13 +604,13 @@
             <a href="#" id="size-guide-footer-link" class="footer-link">دليل المقاسات</a>
         </div>
 
-        <!-- DMCA Badge -->
+        <!-- DMCA Badge - نسخة جديدة -->
         <div class="mt-6 flex justify-center">
-            <a href="//www.dmca.com/Protection/Status.aspx?ID=9f2ac309-e69a-4c86-a06f-6b59a7193143" title="DMCA.com Protection Status" class="dmca-badge" target="_blank" rel="noopener">
-                <img src="https://images.dmca.com/Badges/dmca-badge-w100-2x1-04.png?ID=9f2ac309-e69a-4c86-a06f-6b59a7193143" alt="DMCA.com Protection Status" />
+            <a href="//www.dmca.com/Protection/Status.aspx?ID=d85ccd4c-2ed1-4623-9aca-d4d165a96390" title="DMCA.com Protection Status" class="dmca-badge" target="_blank" rel="noopener">
+                <img src="https://images.dmca.com/Badges/DMCA_logo-green150w.png?ID=d85ccd4c-2ed1-4623-9aca-d4d165a96390" alt="DMCA.com Protection Status" />
             </a>
-            <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"></script>
         </div>
+        <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"></script>
 
         <div class="mt-6 text-center">
             <button id="product-management-toggle" class="text-xs text-gray-400 dark:text-gray-500 hover:text-gray-600 dark:hover:text-gray-300 transition-colors py-1 px-2 rounded hover:bg-gray-200 dark:hover:bg-gray-700">إدارة المنتجات (Admin)</button>
