--- a/index.html
+++ b/index.html
@@ -606,8 +606,7 @@
 
         <!-- DMCA Badge - نسخة جديدة -->
         <div class="mt-6 flex justify-center">
-            <a href="//www.dmca.com/Protection/Status.aspx?ID=1053e588-12d8-46b9-b837-636227cc6840" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w150-2x1-04.png?ID=1053e588-12d8-46b9-b837-636227cc6840"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
-            <div class="mt-6 text-center">
+        <a href="//www.dmca.com/Protection/Status.aspx?ID=1053e588-12d8-46b9-b837-636227cc6840" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120m.png?ID=1053e588-12d8-46b9-b837-636227cc6840"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>            <div class="mt-6 text-center">
             <button id="product-management-toggle" class="text-xs text-gray-400 dark:text-gray-500 hover:text-gray-600 dark:hover:text-gray-300 transition-colors py-1 px-2 rounded hover:bg-gray-200 dark:hover:bg-gray-700">إدارة المنتجات (Admin)</button>
         </div>
     </div>
