--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@ let products = [];
     const MAX_RECENTLY_VIEWED = 8; 
     let isManagementPanelOpen = false;
     let editingProductId = null; 
-    const ALLOWED_ADMIN_EMAILS = ["soso.lovr66@gmail.com"]; 
+    const ALLOWED_ADMIN_EMAILS = ["soso.lovr66@gmail.com", "ramysaad404@gmail.com"]; 
     let currentUser = null; 
     let initialProductsFetched = false; 
     let adminProductSearchTerm = '';
