--- a/index.html
+++ b/index.html
@@ -928,10 +928,10 @@
                     <label for="pf-category" class="form-label-admin">الفئة *</label>
                     <select id="pf-category" class="form-input-admin" required>
                         <option value="" disabled selected>-- اختر فئة --</option>
-                        <option value="tops">Tops (توبات)</option>
-                        <option value="dresses">Dresses (فساتين)</option>
+                        <option value="tops">Tops (هودي)</option>
+                        <option value="dresses">Dresses (تي شيرت)</option>
                         <option value="trousers">Trousers (بناطيل)</option>
-                        <option value="maternity">Maternity (حوامل)</option>
+                        <option value="maternity">Maternity (ملابس منزلية)</option>
                         <option value="skirts">Skirts (تنانير)</option>
                     </select>
                 </div>
@@ -1166,10 +1166,10 @@ let products = [];
     let detailSwiperInstance = null; 
     const categoryData = {
         all: { name: "الكل", icon: "fas fa-tags", description: "تصفحي جميع منتجاتنا المختارة بعناية فائقة." },
-        tops: { name: "توبات", icon: "fas fa-tshirt", description: "مجموعة متنوعة من التوبات والبلوزات والقمصان العصرية والكلاسيكية." },
-        dresses: { name: "فساتين", icon: "fas fa-vest-patches", description: "فساتين أنيقة وعصرية لمختلف المناسبات، من الكاجوال إلى السهرة." },
-        trousers: { name: "بناطيل", icon: "fas fa-user-secret", description: "تشكيلة واسعة من البناطيل المريحة والأنيقة لجميع إطلالاتك." },
-        maternity: { name: "حوامل", icon: "fas fa-person-pregnant", description: "ملابس حوامل مصممة لتوفير الراحة والأناقة خلال فترة الحمل." },
+        tops: { name: "هودي", icon: "fas fa-user-ninja", description: "مجموعة متنوعة من الهودي والبلوزات والقمصان العصرية والكلاسيكية." },
+        dresses: { name: "تي شيرت", icon: "fas fa-vest-patches", description: "تي شيرت أنيقة وعصرية لمختلف المناسبات، من الكاجوال إلى السهرة." },
+        trousers: { name: "بناطيل", icon: "fa-solid fa-person", description: "تشكيلة واسعة من البناطيل المريحة والأنيقة لجميع إطلالاتك." },
+        maternity: { name: "ملابس منزلية", icon: "fas fa-person-pregnant", description: "ملابس ملابس منزلية مصممة لتوفير الراحة والأناقة خلال فترة الحمل." },
         skirts: { name: "تنانير", icon: "fas fa-chess-queen", description: "أحدث موديلات التنانير المتنوعة لجميع الأذواق والمناسبات." }
     };
     const MAX_RECENTLY_VIEWED = 8; 
