--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
         <div class="footer-logo mb-6">
             <img src="photo/logo.webp" alt="Master Quality Logo Footer" class="max-h-10 mx-auto opacity-80" loading="lazy" onerror="this.src='https://placehold.co/130x40/F8FAFC/6B7280?text=Master+Quality&font=cairo'; this.onerror=null;">
         </div>
-        <p class="mb-5 text-sm md:text-base">&copy; <span id="year">2025</span> Master Quality. جميع الحقوق محفوظة.</p>
+        <p class="mb-5 text-sm md:text-base">&copy; <span id="year">2025</span> MISTER Quality. جميع الحقوق محفوظة.</p>
         
         <div class="whatsapp-link-container flex justify-center items-center space-x-5 space-x-reverse mb-6">
             <a href="https://wa.me/9647778076465" target="_blank" rel="noopener noreferrer" class="whatsapp-link group">
