--- a/index.html
+++ b/index.html
@@ -574,13 +574,13 @@
     <!-- Firebase Config Script (Kept in HTML for initialization order) -->
     <script type="module">
       const firebaseConfig = {
-        apiKey: "YOUR_API_KEY_HERE", 
-        authDomain: "YOUR_AUTH_DOMAIN_HERE",
-        projectId: "YOUR_PROJECT_ID_HERE",
-        storageBucket: "YOUR_STORAGE_BUCKET_HERE", 
-        messagingSenderId: "YOUR_SENDER_ID_HERE",
-        appId: "YOUR_APP_ID_HERE",
-        measurementId: "YOUR_MEASUREMENT_ID_HERE" 
+        apiKey: "AIzaSyCKGjIRLL0nZbuYRBkqNG7I0c1yf5SkwMk", 
+        authDomain: "login-72424.firebaseapp.com",
+        projectId: "login-72424",
+        storageBucket: "login-72424.firebasestorage.app", 
+        messagingSenderId: "891002963088",
+        appId: "1:891002963088:web:0700e51bc0de1b18528415",
+        measurementId: "G-185HKC3EB4" 
       };
 
       window.firebaseApp = firebase.initializeApp(firebaseConfig);
