--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <!-- Link to your BUILT CSS file (Tailwind) -->
     <link rel="stylesheet" href="dist/output.css">
 
-    <!-- ملف الأنماط المخصص الجديد (تم التعطيل لأنه مدمج في output.css) -->
     <!-- <link rel="stylesheet" href="style.css"> -->
 
 </head>
@@ -157,7 +156,7 @@
             <a href="#" id="size-guide-footer-link" class="footer-link">دليل المقاسات</a>
         </div>
 
-        <!-- DMCA Badge - نسخة جديدة -->
+        <!-- DMCA Badge - RD UPDATE 1.0-->
         <div class="mt-6 flex justify-center">
         <a href="//www.dmca.com/Protection/Status.aspx?ID=1053e588-12d8-46b9-b837-636227cc6840" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120m.png?ID=1053e588-12d8-46b9-b837-636227cc6840"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>            <div class="mt-6 text-center">
             <button id="product-management-toggle" class="text-xs text-gray-400 dark:text-gray-500 hover:text-gray-600 dark:hover:text-gray-300 transition-colors py-1 px-2 rounded hover:bg-gray-200 dark:hover:bg-gray-700">إدارة المنتجات (Admin)</button>
@@ -571,7 +570,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
 
-    <!-- Firebase Config Script (Kept in HTML for initialization order) -->
+    <!-- FE   -->
     <script type="module">
       const firebaseConfig = {
         apiKey: "AIzaSyCKGjIRLL0nZbuYRBkqNG7I0c1yf5SkwMk", 
@@ -590,7 +589,7 @@
       console.log("Firebase and Firestore initialized in module script.");
     </script>
 
-    <!-- ملف الجافاسكريبت المخصص الجديد -->
+    <!-- RD-JS -->
     <script src="app.js" defer></script>
 
 </body>
