--- a/index.html
+++ b/index.html
@@ -493,11 +493,11 @@
                     <label for="pf-category" class="form-label-admin">الفئة *</label>
                     <select id="pf-category" class="form-input-admin" required>
                         <option value="" disabled selected>-- اختر فئة --</option>
-                        <option value="tops">Tops (هودي)</option>
-                        <option value="dresses">Dresses (تي شيرت)</option>
-                        <option value="trousers">Trousers (بناطيل)</option>
-                        <option value="maternity">Maternity (ملابس منزلية)</option>
-                        <option value="skirts">Skirts (تنانير)</option>
+                        <option value="tops">Hoodie (هودي)</option>
+                        <option value="dresses">T-shirt (تي شيرت)</option>
+                        <option value="trousers">Pants (بناطيل)</option>
+                        <option value="maternity">Home clothes (ملابس منزلية)</option>
+                        <option value="skirts">Other  (غير ذلك)</option>
                     </select>
                 </div>
                 <div>
