--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <!-- Security: Content Security Policy (CSP) - Updated for Maximum Protection -->
+    <!-- Security: Content Security Policy (CSP) - Updated to fix console errors -->
+    <!-- Added 'data:' to font-src and '*.google.com' to connect-src -->
     <meta http-equiv="Content-Security-Policy" content="
         default-src 'self' https://*.firebaseapp.com https://*.googleapis.com https://*.gstatic.com;
         script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://www.gstatic.com https://images.dmca.com https://apis.google.com;
         style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com https://cdn.jsdelivr.net;
         img-src 'self' data: https: blob:;
-        font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com;
-        connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://identitytoolkit.googleapis.com wss://*.firebaseio.com https://firestore.googleapis.com;
+        font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com data:;
+        connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://identitytoolkit.googleapis.com wss://*.firebaseio.com https://firestore.googleapis.com https://*.google.com https://content-firebase.googleapis.com;
         frame-src https://*.firebaseapp.com https://*.firebase.com https://*.google.com;
         object-src 'none';
         base-uri 'self';
